force-app/main/default/objects/Sales_Order_Form__c/Sales_Order_Form__c.object-meta.xml
<CustomObject>
    <label>Sales Order Form</label>
    <nameField>
        <displayFormat>Order Form-{0000}</displayFormat>
        <label>Sales Order Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>