force-app/main/default/objects/Sales_Order_Form__c/fields/Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Order Forms</relationshipLabel>
    <relationshipName>Sales_Order_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>