force-app/main/default/objects/Sales_Order_Form__c/fields/AutoRABIT_Accounts__c.field-meta.xml
<CustomField>
    <fullName>AutoRABIT_Accounts__c</fullName>
    <defaultValue>&quot;accounts@autorabit.com&quot;</defaultValue>
    <label>AutoRABIT Accounts</label>
    <type>Email</type>
</CustomField>