force-app/main/default/objects/Sales_Order_Form__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <label>Billing Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>