force-app/main/default/objects/Sales_Order_Form__c/fields/Billing_contact_person_s_name__c.field-meta.xml
<CustomField>
    <fullName>Billing_contact_person_s_name__c</fullName>
    <label>Billing contact person&apos;s name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>