force-app/main/default/objects/Sales_Order_Form__c/fields/Billing_methodology_details__c.field-meta.xml
<CustomField>
    <fullName>Billing_methodology_details__c</fullName>
    <label>Billing methodology details</label>
    <length>50</length>
    <type>Text</type>
</CustomField>