force-app/main/default/objects/Sales_Order_Form__c/fields/Email_Invoice_to__c.field-meta.xml
<CustomField>
    <fullName>Email_Invoice_to__c</fullName>
    <label>Email Invoice to</label>
    <length>50</length>
    <type>Text</type>
</CustomField>