force-app/main/default/objects/Sales_Order_Form__c/fields/End_Client_Location__c.field-meta.xml
<CustomField>
    <fullName>End_Client_Location__c</fullName>
    <formula>Opportunity__r.Account.BillingStreet  &amp; BR()&amp;
 Opportunity__r.Account.BillingCity  &amp; BR()&amp;
 Opportunity__r.Account.BillingState  &amp; BR()&amp;
 Opportunity__r.Account.BillingPostalCode  &amp; BR()&amp;
 Opportunity__r.Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Client Location</label>
    <type>Text</type>
</CustomField>