force-app/main/default/objects/Sales_Order_Form__c/fields/Hourly_cost__c.field-meta.xml
<CustomField>
    <fullName>Hourly_cost__c</fullName>
    <label>Hourly cost</label>
    <length>20</length>
    <type>Text</type>
</CustomField>