force-app/main/default/objects/Sales_Order_Form__c/fields/Invoicing_frequency__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_frequency__c</fullName>
    <label>Invoicing frequency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>