force-app/main/default/objects/Sales_Order_Form__c/fields/No_of_hours__c.field-meta.xml
<CustomField>
    <fullName>No_of_hours__c</fullName>
    <formula>Opportunity__r.PS_Hrs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>