force-app/main/default/objects/Sales_Order_Form__c/fields/No_of_months__c.field-meta.xml
<CustomField>
    <fullName>No_of_months__c</fullName>
    <formula>Opportunity__r.of_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>