force-app/main/default/objects/Sales_Order_Form__c/fields/No_of_Support__c.field-meta.xml
<CustomField>
    <fullName>No_of_Support__c</fullName>
    <label>No. of Support</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>