force-app/main/default/objects/Sales_Order_Form__c/fields/Opportunity_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Lookup</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Order Forms (Opportunity Lookup)</relationshipLabel>
    <relationshipName>Sales_Order_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>