force-app/main/default/objects/Sales_Order_Form__c/fields/Projected_Support_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Support_End_Date__c</fullName>
    <formula>Support_Start_Date__c + (  Opportunity__r.of_Months__c  *30.44)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected Support End Date</label>
    <type>Date</type>
</CustomField>