force-app/main/default/objects/Sales_Order_Form__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>