force-app/main/default/objects/Sales_Order_Form__c/fields/Sales_Order_Form_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Form_Status__c</fullName>
    <label>Sales Order Form Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>