force-app/main/default/objects/Sales_Order_Form__c/fields/Support_Rate__c.field-meta.xml
<CustomField>
    <fullName>Support_Rate__c</fullName>
    <label>Support Rate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>