force-app/main/default/objects/Sales_Order_Form__c/fields/Support_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Support_Start_Date__c</fullName>
    <formula>Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support Start Date</label>
    <type>Date</type>
</CustomField>