force-app/main/default/objects/Sales_Order_Form__c/fields/Was_any_3rd_party_services_used__c.field-meta.xml
<CustomField>
    <fullName>Was_any_3rd_party_services_used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was any 3rd party services used?</label>
    <type>Checkbox</type>
</CustomField>