force-app/main/default/objects/Sales_Order_Form__c/fields/Was_support_purchased__c.field-meta.xml
<CustomField>
    <fullName>Was_support_purchased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was support purchased?</label>
    <type>Checkbox</type>
</CustomField>