force-app/main/default/objects/Sales_Order_Form__c/validationRules/Was_Support_Purchased.validationRule-meta.xml
<ValidationRule>
    <fullName>Was_Support_Purchased</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Was_support_purchased__c  = TRUE,
OR(
ISBLANK( No_of_Support__c ),
ISBLANK( Support_Rate__c )))</errorConditionFormula>
    <errorDisplayField>Was_support_purchased__c</errorDisplayField>
    <errorMessage>Please fill all the fields in &apos;Support Details&apos; section</errorMessage>
</ValidationRule>